<resources>
    <string name="app_name">Interview Portal</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_account">Create Account…</string>
    <string name="sign_up_to_get_started">Sign up to get started</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="welcome_back">WELCOME BACK!!</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="sign_in">SIGN IN</string>
    <string name="existing_user_sign_in">Existing user? SIGN IN</string>
    <string name="new_user_sign_up">New user? SIGN UP</string>
    <string name="search">search</string>
    <string name="sign_out">Sign Out</string>
    <string name="type_a_message">Type a message</string>
    <string name="send_image">Send Image</string>
    <string name="lorem_ipsum_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry</string>
    <string name="are_you_an_admin">Are you an Admin?</string>
    <string name="date">DATE :</string>
    <string name="start_time">START TIME :</string>
    <string name="end_time">END TIME :</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="_00_00_am">00:00 AM</string>
    <string name="participants">Participants</string>
    <string name="create_interview">CREATE INTERVIEW</string>
    <string name="select_time">Select time</string>
    <string name="pick_date">Pick a date</string>
    <string name="interview_created_successfully">Interview Created successfully!!</string>
    <string name="creating_interview">CREATING INTERVIEW</string>
    <string name="interview_title">Interview Title</string>
    <string name="sample_date">22 April 2022</string>
    <string name="add_participants">Add Participants</string>
    <string name="edit_interview">Edit Interview</string>
    <string name="formatted_time">From : %1$s - %2$s</string>
    <string name="formatted_participant_count">%1$d Participants</string>
    <string name="formatted_chip_name">%1$s%2$s</string>
    <string name="upload_resume">UPLOAD RESUME</string>
    <string name="upload_your_resume">Upload you resume</string>
    <string name="note_only_pdfs_are_allowed">Note : Only PDFs are allowed</string>
    <string name="uploading">UPLOADING…</string>
    <string name="upload_success">UPLOADED SUCCESSFULLY!!</string>
    <string name="upload_fail">UPLOAD FAILED!!</string>
    <string name="upload">Upload</string>
</resources>