<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorLight"
    tools:context=".fragments.UploadFragment">

    <TextView
        android:id="@+id/textHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_12sdp"
        android:fontFamily="@font/ubuntu_regular"
        android:text="@string/upload_resume"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_18ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textNote"
        android:textStyle="italic"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_12sdp"
        android:fontFamily="@font/ubuntu_regular"
        android:text="@string/note_only_pdfs_are_allowed"
        android:textColor="@color/colorTextSecondary"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textHeader" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnUpload"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_4sdp"
        android:layout_marginEnd="@dimen/_4sdp"
        android:layout_marginBottom="@dimen/_4sdp"
        android:layout_marginTop="@dimen/_24sdp"
        android:includeFontPadding="false"
        android:padding="@dimen/_8sdp"
        android:text="@string/upload"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_16ssp"
        app:backgroundTint="@color/colorYellow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textNote"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>